<resources>
    <string name="app_name">E-commerce</string>
    <string name="sidebar_icon_description">sale_icon</string>
    <string name="main_scene_text">Главная</string>
    <string name="about_text">Про нас</string>
    <string name="Contacts_text">Контакты</string>
    <string name="title_text_1">Courses</string>
    <string name="title_text_2">App</string>
    <string name="setting_icon_descr">setting_icon</string>
    <string name="category_bg_desc">фон категории</string>
    <string name="product_icon_dscr">product_icon</string>
    <string name="start_learning">Старт обучения:</string>
    <string name="level">Уровень:</string>
    <string name="course_page__course_desc">Программа обучения Джава – рассчитана на новичков в данной сфере.</string>
    <string name="course_page__course_desc_2">За программу вы изучите построение графических приложений под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Андроид приложенийи отлично изучите сам язык Джава!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>