<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:id="@+id/course_page__course_bg"
    tools:context=".model.CoursePageFragment">

    <ImageView
        android:id="@+id/course_page__course_img"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:contentDescription="@string/product_icon_dscr"
        android:scaleType="centerCrop"
        android:transitionName="courseImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_java" />

    <TextView
        android:id="@+id/course_page__title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_page__course_img"
        tools:text="Профессия Java разработчик" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_page__title"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/start_learning" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/level"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/course_page__date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="14sp"
                    tools:text="1 января" />

                <TextView
                    android:id="@+id/course_page__level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    tools:text="начинающий"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/course_page_first_p"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:text="@string/course_page__course_desc"/>

    <TextView
        android:id="@+id/course_page_second_p"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_page_first_p"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/course_page__course_desc_2"/>

    <ImageButton
        android:id="@+id/add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_page_second_p"
        app:srcCompat="@drawable/ic_shop" />

</androidx.constraintlayout.widget.ConstraintLayout>