<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment"
    android:id="@+id/main_fragment">


    <TextView
        android:id="@+id/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_1"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_2"
        android:textSize="40sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/TitleText2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/title_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/setting_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/setting_icon_descr"
        app:layout_constraintTop_toBottomOf="@id/title_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="15dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="@id/setting_icon"
        app:layout_constraintBottom_toBottomOf="@id/setting_icon"
        app:layout_constraintStart_toEndOf="@id/setting_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/category_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="20dp"
        android:clipToPadding="false" />

</androidx.constraintlayout.widget.ConstraintLayout>