<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/product_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/product_icon_dscr"
                app:srcCompat="@drawable/ic_java"/>

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat_bold"
                tools:text="разработка" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/start_learning" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/level"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/course_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:layout_weight="40"
                    android:fontFamily="@font/montserrat_bold"
                    tools:text="разработка"/>

                <TextView
                    android:id="@+id/course_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_weight="40"
                    android:fontFamily="@font/montserrat_bold"
                    tools:text="разработка"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>